@@ -18,9 +18,8 @@ import org.hibernate.StatelessSession;
 import org.schabi.newpipe.extractor.NewPipe;
 import org.schabi.newpipe.extractor.localization.ContentCountry;
 import org.schabi.newpipe.extractor.localization.Localization;
-import org.schabi.newpipe.extractor.services.youtube.YoutubeThrottlingDecrypter;
+import org.schabi.newpipe.extractor.services.youtube.YoutubeJavaScriptPlayerManager;
 import org.schabi.newpipe.extractor.services.youtube.extractors.YoutubeStreamExtractor;
-import rocks.kavin.reqwest4j.ReqwestUtils;
 
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
@@ -47,17 +46,24 @@ public class Main {
 
         Injector.useSpecializer();
 
-        Multithreading.runAsync(() -> new Thread(new SyncRunner(
+        try {
+            LiquibaseHelper.init();
+        } catch (Exception e) {
+            ExceptionHandler.handle(e);
+            System.exit(1);
+        }
+
+        Multithreading.runAsync(() ->  Thread.ofVirtual().start(new SyncRunner(
                 new OkHttpClient.Builder().readTimeout(60, TimeUnit.SECONDS).build(),
                 MATRIX_SERVER,
                 MatrixHelper.MATRIX_TOKEN)
-        ).start());
+        ));
 
         new Timer().scheduleAtFixedRate(new TimerTask() {
             @Override
             public void run() {
-                System.out.printf("ThrottlingCache: %o entries%n", YoutubeThrottlingDecrypter.getCacheSize());
-                YoutubeThrottlingDecrypter.clearCache();
+                System.out.printf("ThrottlingCache: %o entries%n", YoutubeJavaScriptPlayerManager.getThrottlingParametersCacheSize());
+                YoutubeJavaScriptPlayerManager.clearThrottlingParametersCache();
             }
         }, 0, TimeUnit.MINUTES.toMillis(60));
 
